--- a/list/funmoney.html
+++ b/list/funmoney.html
@@ -159,7 +159,8 @@
 
     <div class="grid-container">
         <div class="page-title">Fun Money</div>
-        <div class="navi-button"><a href="list_m.html"><img src="list.png"></a></div>
+        <div class="navi-button"><a href="list_m.html"><img src="list.png"></a> <a href="budget.html"><img
+                    src="budget.png"></a></div>
         <div class="mTitle" id='mTitle'>mikey</div>
         <div class="yTitle" id='yTitle'>yoko</div>
         <div class="leftSpan" id='mikeyBalance'>-_-</div>
