--- a/list/list_m.html
+++ b/list/list_m.html
@@ -113,11 +113,12 @@
 <body>
     <div class='grid-container'>
         <div class='header' style="display: inline;">Checklist</div>
-        <div class='header' style="display: inline; text-align: right;"><img onclick="funMoneyClick()" src='fun.png'>
-        </div>
-        <img src='undo.png' id='undo' style='border:6px; border-style:solid; border-color:white; display: none;'
-            onclick="undoDelete()">
-        <div id='undoText'></div>
+        <div class='header' style="display: inline; text-align: right;"><img onclick="funMoneyClick()" src='fun.png'> <a
+                href="budget.html"><img src="budget.png"></a></div>
+    </div>
+    <img src='undo.png' id='undo' style='border:6px; border-style:solid; border-color:white; display: none;'
+        onclick="undoDelete()">
+    <div id='undoText'></div>
     </div>
     <div class="mainBlock">
         <div class='login' id='login'>
