--- a/list/funmoney.html
+++ b/list/funmoney.html
@@ -15,12 +15,12 @@
     }
 
     .page-title {
-        grid-column: 1/4;
+        grid-column: 1/3;
         background-color: rgb(206, 202, 194);
         border-style: solid;
         border-color: rgb(245, 240, 228);
         color: dimgrey;
-        font-size: 30px;
+        font-size: 20px;
         text-align: center;
     }
 
@@ -65,8 +65,7 @@
     }
 
     .navi-button {
-        grid-column-start: 4;
-        grid-column-end: 4;
+        grid-column: 3/5;
         text-align: right;
     }
 
@@ -160,7 +159,7 @@
     <div class="grid-container">
         <div class="page-title">Fun Money</div>
         <div class="navi-button"><a href="list_m.html"><img src="list.png"></a> <a href="budget.html"><img
-                    src="budget.png"></a></div>
+                    src="budget.png"></a> <a href="dicegame.html"><img src="5.png"></a></div>
         <div class="mTitle" id='mTitle'>mikey</div>
         <div class="yTitle" id='yTitle'>yoko</div>
         <div class="leftSpan" id='mikeyBalance'>-_-</div>
