--- a/list/list_m.html
+++ b/list/list_m.html
@@ -114,7 +114,7 @@
     <div class='grid-container'>
         <div class='header' style="display: inline;">Checklist</div>
         <div class='header' style="display: inline; text-align: right;"><img onclick="funMoneyClick()" src='fun.png'> <a
-                href="budget.html"><img src="budget.png"></a></div>
+                href="budget.html"><img src="budget.png"></a> <a href="dicegame.html"><img src="5.png"></a></div>
     </div>
     <img src='undo.png' id='undo' style='border:6px; border-style:solid; border-color:white; display: none;'
         onclick="undoDelete()">
