--- a/list/budget.html
+++ b/list/budget.html
@@ -16,7 +16,7 @@
     }
 
     .pageName {
-        grid-column: 1/4;
+        grid-column: 1/3;
         display: inline-block;
         text-align: center;
         padding: 10px;
@@ -25,12 +25,12 @@
         border: thistle;
         border-style: solid;
         border-bottom: gainsboro;
-        font-size: 25px;
+        font-size: 22px;
         color: rgb(78, 111, 121);
     }
 
     .navi-block {
-        grid-column: 4/5;
+        grid-column: 3/5;
         display: inline-block;
         text-align: right;
         padding: 10px;
@@ -141,7 +141,7 @@
     <div class='mainGrid'>
         <div class='pageName'>Budget</div>
         <div class='navi-block'><a href="list_m.html"><img src="list.png"></a> <a href="funmoney.html"><img
-                    src="fun.png"></a></div>
+                    src="fun.png"></a> <a href="dicegame.html"><img src="5.png"></a></div>
         <div class='budget-add' style="flex: auto;"><img src="plus.png" onclick="clickAdd()"></div>
         <div class="input-balance-bar" id='inputTransactionBlock' style="display: none;">
             <input id='inputTransactionPrice' type="text" placeholder="amount" size="7">
