--- a/list/dicegame.html
+++ b/list/dicegame.html
@@ -134,12 +134,12 @@
         <div class="dice-area" id='diceArea' style="height: 265px;">
             <img id='dice-image' src="1.png" style="position: absolute;">
         </div>
-        <div class="left-column">Mikey</br>
+        <div class="left-column" id="m-column">Mikey</br>
             <img id='dice-M' src="minus.png" style="padding: 20px"></br>
             <div id='mikeyRollButton' onclick="rollDice()" class="roll-button">
                 Roll Dice</div>
         </div>
-        <div class="right-column">Yoko</br>
+        <div class="right-column" id="y-column">Yoko</br>
             <img id='dice-Y' src="minus.png" style="padding: 20px"></br>
             <div id='yokoRollButton' onclick="rollDice()" class="roll-button">
                 Roll
