--- a/list/dicegame.html
+++ b/list/dicegame.html
@@ -129,7 +129,7 @@
 <body>
     <div class="main-grid">
         <div class="topper">Dice Game</div>
-        <div class='navi-block'> <a href="list_m.html"><img src="list.png"></a> <a href="funmoney.html"><img
+        <div class='navi-block'> <a href="list3.html"><img src="list.png"></a> <a href="funmoney.html"><img
                     src="fun.png"></a> <a href="budget.html"><img src="budget.png"></a> </div>
         <div class="dice-area" id='diceArea' style="height: 265px;">
             <img id='dice-image' src="1.png" style="position: absolute;">
