--- a/list/budget.html
+++ b/list/budget.html
@@ -140,7 +140,7 @@
 <body>
     <div class='mainGrid'>
         <div class='pageName'>Budget</div>
-        <div class='navi-block'><a href="list_m.html"><img src="list.png"></a> <a href="funmoney.html"><img
+        <div class='navi-block'><a href="list3.html"><img src="list.png"></a> <a href="funmoney.html"><img
                     src="fun.png"></a> <a href="dicegame.html"><img src="5.png"></a></div>
         <div class='budget-add' style="flex: auto;"><img src="plus.png" onclick="clickAdd()"></div>
         <div class="input-balance-bar" id='inputTransactionBlock' style="display: none;">
