--- a/list/funmoney.html
+++ b/list/funmoney.html
@@ -158,7 +158,7 @@
 
     <div class="grid-container">
         <div class="page-title">Fun Money</div>
-        <div class="navi-button"><a href="list_m.html"><img src="list.png"></a> <a href="budget.html"><img
+        <div class="navi-button"><a href="list3.html"><img src="list.png"></a> <a href="budget.html"><img
                     src="budget.png"></a> <a href="dicegame.html"><img src="5.png"></a></div>
         <div class="mTitle" id='mTitle'>mikey</div>
         <div class="yTitle" id='yTitle'>yoko</div>
