--- a/list/budget.html
+++ b/list/budget.html
@@ -141,7 +141,8 @@
     <div class='mainGrid'>
         <div class='pageName'>Budget</div>
         <div class='navi-block'><a href="list3.html"><img src="list.png"></a> <a href="funmoney.html"><img
-                    src="fun.png"></a> <a href="dicegame.html"><img src="5.png"></a></div>
+                    src="fun.png"></a> <a href="dicegame.html"><img src="5.png"></a><a href="christmas.html"><img
+                    src="christmas.png"></a></div>
         <div class='budget-add' style="flex: auto;"><img src="plus.png" onclick="clickAdd()"></div>
         <div class="input-balance-bar" id='inputTransactionBlock' style="display: none;">
             <input id='inputTransactionPrice' type="text" placeholder="amount" size="7">
