--- a/list/christmas.html
+++ b/list/christmas.html
@@ -131,12 +131,12 @@
             grid-column: 5/6;
         }
 
-        @import url('https://fonts.googleapis.com/css?family=Chilanka');
+        @import url('https://fonts.googleapis.com/css2?family=Chilanka&display=swap');
 
         body {
             background-color: #F24236;
             width: 100%;
-            font-family: 'Chilanka';
+            font-family: 'Chilanka', cursive;
         }
 
         .container {
