--- a/list/christmas.html
+++ b/list/christmas.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Christmas List</title>
     <link rel="shortcut icon" href="icon.ico">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet">
     <style>
         .grid-container {
             overflow: hidden;
