--- a/info.html
+++ b/info.html
@@ -79,16 +79,26 @@ a:active {
   <table width="851" height="376" border="0" cellspacing="4">
     <tbody>
       <tr>
-        <td height="23">Education:
-        </td>
+        <td height="23" rowspan="2">Education:
+          <br />
+          2012 MFA University of Pennsylvania<br />
+2009 BA Georgia Southern University       </td>
+        <td>Current Shows:</td>
+      </tr>
+      <tr>
+        <td><p>Lexington Art League Members Show, <br />
+          Nov 20 - Jan 15 2021<br />
+          The Loudoun House, Lexington KY
+          </p>
+        <p>&nbsp;</p></td>
+      </tr>
+      <tr>
+        <td width="420" rowspan="20"><p>&nbsp;</p></td>
         <td>Select Shows and Awards:</td>
       </tr>
       <tr>
-        <td width="420" rowspan="19"><p>2012 MFA University of Pennsylvania<br />
-        2009 BA Georgia Southern University       </p></td>
         <td>National Juried Exhibition: Balance and Resilience<br />
-          Best of Painting Award
-          <br />
+Best of Painting Award <br />
 2020, Giles Gallery, EKU, Richmond KY</td>
       </tr>
       <tr>
