--- a/list/dicegame.html
+++ b/list/dicegame.html
@@ -99,6 +99,14 @@
         display: none;
         padding: 20px;
     }
+
+    #miTo {
+        color: rgb(36, 70, 102);
+    }
+
+    #yoTo {
+        color: rgb(104, 37, 37);
+    }
 </style>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
@@ -146,6 +154,8 @@
                 Dice</div>
         </div>
         <div class="streak-box" id="streak">loading streak... </div>
+        <div class="left-column" id='miTo'>...</div>
+        <div class="right-column" id='yoTo'>...</div>
 
     </div>
     <div class='login' id='login'>
