--- a/info.html
+++ b/info.html
@@ -90,7 +90,11 @@ a:active {
           Nov 20 - Jan 15 2021<br />
           The Loudoun House, Lexington KY
           </p>
-        <p>&nbsp;</p></td>
+        <p>Upcoming Shows:</p>
+        <p>10th Annual National Juried Exhibition <br>
+        January 19 – February 12, 2021 <br>
+        Charles W. and Norma C. Carroll Gallery<br>
+        Marshall University, Huntington, WV</p></td>
       </tr>
       <tr>
         <td width="420" rowspan="20"><p>&nbsp;</p></td>
