--- a/list/christmas.html
+++ b/list/christmas.html
@@ -238,7 +238,7 @@
             <div style="float: left">
                 <p id="days"></p>
             </div><a href="list3.html"><img src="list.png"></a> <a href="funmoney.html"><img src="fun.png"></a> <a
-                href="budget.html"><img src="budget.png"></a> <a href="dicegame.html"><img src="5.png"></a>
+                href="budget.html"><img src="budget.png"></a> <a href="dice2.html"><img src="5.png"></a>
         </div>
     </div>
     <div class="top" id='top'>
