--- a/list/budget.html
+++ b/list/budget.html
@@ -141,8 +141,7 @@
     <div class='mainGrid'>
         <div class='pageName'>Budget</div>
         <div class='navi-block'><a href="list3.html"><img src="list.png"></a> <a href="funmoney.html"><img
-                    src="fun.png"></a> <a href="dicegame.html"><img src="5.png"></a><a href="christmas.html"><img
-                    src="christmas.png"></a></div>
+                    src="fun.png"></a> <a href="dice2.html"><img src="5.png"></a></div>
         <div class='budget-add' style="flex: auto;"><img src="plus.png" onclick="clickAdd()"></div>
         <div class="input-balance-bar" id='inputTransactionBlock' style="display: none;">
             <input id='inputTransactionPrice' type="text" placeholder="amount" size="7">
@@ -159,7 +158,8 @@
         </br>
         <input type="password" size='25' placeholder="password" id="passField">
         </br>
-        <button id='loginButton'>Login</button></div>
+        <button id='loginButton'>Login</button>
+    </div>
     </div>
 
     <script src="budget.js"></script>
