--- a/list/funmoney.html
+++ b/list/funmoney.html
@@ -159,7 +159,7 @@
     <div class="grid-container">
         <div class="page-title">Fun Money</div>
         <div class="navi-button"><a href="list3.html"><img src="list.png"></a> <a href="budget.html"><img
-                    src="budget.png"></a> <a href="dicegame.html"><img src="5.png"></a></div>
+                    src="budget.png"></a> <a href="dice2.html"><img src="5.png"></a></div>
         <div class="mTitle" id='mTitle'>mikey</div>
         <div class="yTitle" id='yTitle'>yoko</div>
         <div class="leftSpan" id='mikeyBalance'>-_-</div>
@@ -182,7 +182,8 @@
         </br>
         <input type="password" size='25' placeholder="password" id="passField">
         </br>
-        <button id='loginButton'>Login</button></div>
+        <button id='loginButton'>Login</button>
+    </div>
     <button id='devButton' onclick="devButtonClick()">Dev Button</button>
 
     <script src="funmoney.js"></script>
