--- a/list/list3.html
+++ b/list/list3.html
@@ -184,8 +184,7 @@
     <div class="grid-container" id="grid">
         <div class='navi-block'>
             <div style="float: left; color: darkgrey;">List 2.0</div> <a href="funmoney.html"><img src="fun.png"></a> <a
-                href="budget.html"><img src="budget.png"></a> <a href="dicegame.html"><img src="5.png"></a><a
-                href="christmas.html"><img src="christmas.png"></a>
+                href="budget.html"><img src="budget.png"></a> <a href="dice2.html"><img src="5.png"></a>
         </div>
     </div>
     <div class="top" id='top'>
