--- a/info.html
+++ b/info.html
@@ -83,22 +83,19 @@ a:active {
           <br />
           2012 MFA University of Pennsylvania<br />
 2009 BA Georgia Southern University       </td>
-        <td>Current Shows:</td>
+        <td>Select Shows and Awards:</td>
       </tr>
       <tr>
-        <td><p>Lexington Art League Members Show, <br />
-          Nov 20 - Jan 15 2021<br />
-          The Loudoun House, Lexington KY
-          </p>
-        <p>Upcoming Shows:</p>
-        <p>10th Annual National Juried Exhibition <br>
-        January 19 – February 12, 2021 <br>
-        Charles W. and Norma C. Carroll Gallery<br>
-        Marshall University, Huntington, WV</p></td>
+        <td><p>10th Annual National Juried Exhibition <br />
+          2021, 
+          Charles W. and Norma C. Carroll Gallery<br />
+          Marshall University, Huntington, WV</p></td>
       </tr>
       <tr>
         <td width="420" rowspan="20"><p>&nbsp;</p></td>
-        <td>Select Shows and Awards:</td>
+        <td>Lexington Art League Members Show<br />
+  2021, 
+The Loudoun House, Lexington KY </td>
       </tr>
       <tr>
         <td>National Juried Exhibition: Balance and Resilience<br />
