--- a/list/budget.html
+++ b/list/budget.html
@@ -153,6 +153,11 @@
         <div id="historyPlaces" class='history-place'>-_-</div>
         <img id='bottomArrow' class='bottom-arrow' src="down.png" onclick="expandHistory()">
     </div>
+    <div class='mainGrid'>
+        <div class='pageName'>Vacation</div>
+        <div class='historyPrices'></div>
+        <div class='historyPlaces' id="vacationAmount"></div>
+    </div>
     <div id='loginBlock' style='display: none'>
         <input type="text" size='25' placeholder="email" id="emailField">
         </br>
