--- a/list/overview.html
+++ b/list/overview.html
@@ -23,7 +23,7 @@
         <iframe class="framer" src=budget.html height="700px" width="320px"></iframe>
         <iframe class="framer" src=funmoney.html height="700px" width="320px"></iframe>
         <iframe class="framer" src=list3.html height="700px" width="320px"></iframe>
-        <iframe class="framer" src=dicegame.html height="700px" width="320px"></iframe>
+        <iframe class="framer" src=dice2.html height="700px" width="320px"></iframe>
     </div>
     <p>(c) mikey winsor</p>
 </body>
