--- a/list/budget.html
+++ b/list/budget.html
@@ -103,6 +103,22 @@
         padding: 14px;
     }
 
+    .vaca-left {
+        border-style: dotted;
+        text-align: center;
+        border-color: rgb(218, 140, 218);
+        grid-column: 1/3;
+        padding: 14px;
+    }
+
+    .vaca-right {
+        border-style: groove;
+        text-align: center;
+        border-color: rgb(151, 119, 151);
+        grid-column: 3/5;
+        padding: 14px;
+    }
+
     .bottom-arrow {
         grid-column: 1/5;
         grid-row: 5;
@@ -154,9 +170,8 @@
         <img id='bottomArrow' class='bottom-arrow' src="down.png" onclick="expandHistory()">
     </div>
     <div class='mainGrid'>
-        <div class='pageName'>Vacation</div>
-        <div class='historyPrices'></div>
-        <div class='historyPlaces' id="vacationAmount"></div>
+        <div class='vaca-left'>Vacation</div>
+        <div class='vaca-right' id="vacationAmount"></div>
     </div>
     <div id='loginBlock' style='display: none'>
         <input type="text" size='25' placeholder="email" id="emailField">
