--- a/info.html
+++ b/info.html
@@ -76,104 +76,126 @@ a:active {
   </p>
 </div>
 <div align="center">
-  <table width="851" height="376" border="0" cellspacing="4">
+  <table width="832" height="376" border="0" cellspacing="4">
     <tbody>
       <tr>
-        <td height="23" rowspan="2">Education:
-          <br />
-          2012 MFA University of Pennsylvania<br />
-2009 BA Georgia Southern University       </td>
-        <td>Select Shows and Awards:</td>
+        <td width="326" rowspan="22"><p>Education:</p>
+          <p>2012 MFA University of Pennsylvania<br />
+            <br />
+            2009 BA Georgia Southern University       
+        </p>          <p>&nbsp;</p></td>
+        <td>&nbsp;</td>
+        <td height="23"><p>Select Shows and Awards:<br />
+        </td>
       </tr>
       <tr>
-        <td><p>10th Annual National Juried Exhibition <br />
-          2021, 
+        <td>2021</td>
+        <td>10th Annual National Juried Exhibition <br />
           Charles W. and Norma C. Carroll Gallery<br />
-          Marshall University, Huntington, WV</p></td>
+        Marshall University, Huntington, WV</td>
       </tr>
       <tr>
-        <td width="420" rowspan="20"><p>&nbsp;</p></td>
+        <td>&nbsp;</td>
         <td>Lexington Art League Members Show<br />
-  2021, 
-The Loudoun House, Lexington KY </td>
+           
+        The Loudoun House, Lexington KY </td>
       </tr>
       <tr>
+        <td>2020</td>
         <td>National Juried Exhibition: Balance and Resilience<br />
 Best of Painting Award <br />
-2020, Giles Gallery, EKU, Richmond KY</td>
+ Giles Gallery, EKU, Richmond KY</td>
       </tr>
       <tr>
+        <td>2019</td>
         <td>PRHBTN<br />
-        2019, The Loudon House, Lexington KY</td>
+        The Loudon House, Lexington KY</td>
       </tr>
       <tr>
+        <td>&nbsp;</td>
         <td>Kansas City Zoo Benefit Art Show<br />
-        2019, Jones Gallery</td>
+        Jones Gallery</td>
       </tr>
       <tr>
+        <td>&nbsp;</td>
         <td>What We Inhabit<br />
-          2019, LexArts Gallery, Lexington, KY</td>
+          LexArts Gallery, Lexington, KY</td>
       </tr>
       <tr>
+        <td>&nbsp;</td>
         <td> Third Annual Juried Competition<br />
-        2019, Center for Contemporary Arts, Abilene, TX</td>
+         Center for Contemporary Arts, Abilene, TX</td>
       </tr>
       <tr>
+        <td>&nbsp;</td>
         <td>Bluegrass Transplants Exhibition<br />
-        2019, The Loudon House, Lexington KY</td>
+        The Loudon House, Lexington KY</td>
       </tr>
       <tr>
+        <td>&nbsp;</td>
         <td>Birds, Bees, Flowers, and Trees<br />          
-        2019, RAAC, Richmond, KY</td>
+         RAAC, Richmond, KY</td>
       </tr>
       <tr>
+        <td>2018</td>
         <td>Jonathan LeVine Delusion Art Competition<br />
-          2018, People's Choice Finalist</td>
+           People's Choice Finalist</td>
       </tr>
       <tr>
+        <td>2017</td>
         <td>Shape Shifting Liveliness, (solo)<br />          
-          2017, The Center for the Arts, Murfreesboro, TN</td>
+           The Center for the Arts, Murfreesboro, TN</td>
       </tr>
       <tr>
+        <td>2016</td>
         <td>Antioch Art at the Mall <br />
-          2016,          
+                    
         Nashville, TN</td>
       </tr>
       <tr>
+        <td>2012</td>
         <td>Continuum<br />          
-          2012, The CAT, Statesboro, GA</td>
+           The CAT, Statesboro, GA</td>
       </tr>
       <tr>
-        <td width="421"> Upenn MFA Thesis Exhibit<br />          
-          2012, The Crane, Philadelphia, PA<</td>
+        <td width="51">&nbsp;</td>
+        <td width="433"> Upenn MFA Thesis Exhibit<br />          
+           The Crane, Philadelphia, PA<</td>
       </tr>
       <tr>
+        <td>2011</td>
         <td>Liquid on Pane, (solo, catalogue)<br />          
-          2011, The Physical Lab, Philadelphia, PA</td>
+           The Physical Lab, Philadelphia, PA</td>
       </tr>
       <tr>
+        <td>&nbsp;</td>
         <td>Call It<br />          
-        2011, Charles Addams Gallery, Philadelphia, PA</td>
+         Charles Addams Gallery, Philadelphia, PA</td>
       </tr>
       <tr>
+        <td>2010</td>
         <td>Dreaming in Pursuit of Memory<br />
-          2010, Online Exhibition</td>
+           Online Exhibition</td>
       </tr>
       <tr>
+        <td>&nbsp;</td>
         <td>Exit Show<br />
-        2010, Statesboro, GA</td>
+         Statesboro, GA</td>
       </tr>
       <tr>
+        <td>2009</td>
         <td>Yomitobi: Paintings<br />          
-        2009, Statesboro, GA</td>
+         Statesboro, GA</td>
       </tr>
       <tr>
+        <td>2007</td>
         <td height="18">Going Somewhere<br />          
-          2007, Statesboro, GA</td>
+           Statesboro, GA</td>
       </tr>
       <tr>
+        <td>2006</td>
         <td height="18">Small Faces, Up-close<br />
-          2006, Nagoya, Japan</td>
+           Nagoya, Japan</td>
       </tr>
     </tbody>
   </table>
