--- a/info.html
+++ b/info.html
@@ -160,7 +160,7 @@ Best of Painting Award <br />
       <tr>
         <td width="51">&nbsp;</td>
         <td width="433"> Upenn MFA Thesis Exhibit<br />          
-           The Crane, Philadelphia, PA<</td>
+           The Crane, Philadelphia, PA</td>
       </tr>
       <tr>
         <td>2011</td>
