--- a/info.html
+++ b/info.html
@@ -79,17 +79,30 @@ a:active {
   <table width="832" height="376" border="0" cellspacing="4">
     <tbody>
       <tr>
-        <td width="326" rowspan="22"><p>Education:</p>
+        <td width="326" rowspan="24"><p>Education:</p>
           <p>2012 MFA University of Pennsylvania<br />
             <br />
             2009 BA Georgia Southern University       
         </p>          <p>&nbsp;</p></td>
         <td>&nbsp;</td>
-        <td height="23"><p>Select Shows and Awards:<br />
+        <td height="23"><p>Upcoming &amp; Current Shows<br />
         </td>
       </tr>
       <tr>
         <td>2021</td>
+        <td><p>Pharmacopeia, <br />
+        July 9th - August 6th,<br />
+        The Chateau Gallery,<br />
+        1230 South 3rd Street, Louisville, KY, 40203</p></td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td><p><br />
+          Select Shows and Awards:</p>
+        <p>&nbsp;</p></td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
         <td>10th Annual National Juried Exhibition <br />
           Charles W. and Norma C. Carroll Gallery<br />
         Marshall University, Huntington, WV</td>
