--- a/info.html
+++ b/info.html
@@ -79,7 +79,7 @@ a:active {
   <table width="832" height="376" border="0" cellspacing="4">
     <tbody>
       <tr>
-        <td width="326" rowspan="24"><p>Education:</p>
+        <td width="326" rowspan="25"><p>Education:</p>
           <p>2012 MFA University of Pennsylvania<br />
             <br />
             2009 BA Georgia Southern University       
@@ -90,10 +90,8 @@ a:active {
       </tr>
       <tr>
         <td>2021</td>
-        <td><p>Pharmacopeia, <br />
-        July 9th - August 6th,<br />
-        The Chateau Gallery,<br />
-        1230 South 3rd Street, Louisville, KY, 40203</p></td>
+        <td><p>Team Kentucky<br>
+Kentucky State Capitol 700 Capitol Avenue Frankfort, July 1 - Dec. 31, 2021</p></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
@@ -103,6 +101,11 @@ a:active {
       </tr>
       <tr>
         <td>2021</td>
+        <td>Pharmacopeia<br />
+The Chateau Gallery, Louisville, KY, 40203</td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
         <td>10th Annual National Juried Exhibition <br />
           Charles W. and Norma C. Carroll Gallery<br />
         Marshall University, Huntington, WV</td>
