--- a/info.html
+++ b/info.html
@@ -79,7 +79,7 @@ a:active {
   <table width="832" height="376" border="0" cellspacing="4">
     <tbody>
       <tr>
-        <td width="326" rowspan="25"><p>Education:</p>
+        <td width="326" rowspan="27"><p>Education:</p>
           <p>2012 MFA University of Pennsylvania<br />
             <br />
             2009 BA Georgia Southern University       
@@ -89,7 +89,21 @@ a:active {
         </td>
       </tr>
       <tr>
-        <td>2021</td>
+        <td>&nbsp;</td>
+        <td><p>The Object Seen<br />
+          Art Center of the Bluegrass, Danville, KY<br />
+          Reception: Sept 24,  5:30 - 7 pm          <br />
+        Sept 15 - Oct 30, 2021</p></td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td><p>PRHBTN  2021<br />
+          Loudoun House, Lexington, KY  <br />
+Reception: Oct 15, 6-10pm<br />
+Oct 15 - Nov 12, 2021</p></td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
         <td><p>Team Kentucky<br>
 Kentucky State Capitol 700 Capitol Avenue Frankfort, July 1 - Dec. 31, 2021</p></td>
       </tr>
