--- a/info.html
+++ b/info.html
@@ -90,31 +90,28 @@ a:active {
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td><p>The Object Seen<br />
-          Art Center of the Bluegrass, Danville, KY<br />
-          Reception: Sept 24,  5:30 - 7 pm          <br />
-        Sept 15 - Oct 30, 2021</p></td>
-      </tr>
-      <tr>
-        <td>&nbsp;</td>
         <td><p>PRHBTN  2021<br />
-          Loudoun House, Lexington, KY  <br />
+Loudoun House, Lexington, KY <br />
 Reception: Oct 15, 6-10 pm<br />
 Oct 15 - Nov 12, 2021</p></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td><p>Team Kentucky<br>
+        <td><p>Team Kentucky<br />
 Kentucky State Capitol 700 Capitol Avenue Frankfort, July 1 - Dec. 31, 2021</p></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
         <td><p><br />
-          Select Shows and Awards:</p>
-        <p>&nbsp;</p></td>
+Select Shows and Awards:</p></td>
       </tr>
       <tr>
         <td>2021</td>
+        <td> The Object Seen<br />
+Art Center of the Bluegrass, Danville, KY</td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
         <td>Pharmacopeia<br />
 The Chateau Gallery, Louisville, KY, 40203</td>
       </tr>
