--- a/info.html
+++ b/info.html
@@ -76,7 +76,7 @@ a:active {
   </p>
 </div>
 <div align="center">
-  <table width="832" height="376" border="0" cellspacing="4">
+  <table width="832" height="376" border="0" cellpadding="5" cellspacing="4">
     <tbody>
       <tr>
         <td width="326" rowspan="27"><p>Education:</p>
@@ -85,25 +85,25 @@ a:active {
             2009 BA Georgia Southern University       
         </p>          <p>&nbsp;</p></td>
         <td>&nbsp;</td>
-        <td height="23"><p>Upcoming &amp; Current Shows<br />
+        <td height="23">Upcoming &amp; Current Shows:
         </td>
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td><p>PRHBTN  2021<br />
+        <td>PRHBTN  2021<br />
 Loudoun House, Lexington, KY <br />
 Reception: Oct 15, 6-10 pm<br />
-Oct 15 - Nov 12, 2021</p></td>
+Oct 15 - Nov 12, 2021</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td><p>Team Kentucky<br />
-Kentucky State Capitol 700 Capitol Avenue Frankfort, July 1 - Dec. 31, 2021</p></td>
+        <td>Team Kentucky<br />
+Kentucky State Capitol 700 Capitol Avenue Frankfort, July 1 - Dec. 31, 2021</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td><p><br />
-Select Shows and Awards:</p></td>
+        <td></br>
+Select Shows and Awards:</td>
       </tr>
       <tr>
         <td>2021</td>
@@ -113,7 +113,7 @@ Art Center of the Bluegrass, Danville, KY</td>
       <tr>
         <td>&nbsp;</td>
         <td>Pharmacopeia<br />
-The Chateau Gallery, Louisville, KY, 40203</td>
+The Chateau Gallery, Louisville, KY</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
