--- a/list/budget.html
+++ b/list/budget.html
@@ -156,8 +156,9 @@
 <body>
     <div class='mainGrid'>
         <div class='pageName'>Budget</div>
-        <div class='navi-block'><a href="list3.html"><img src="list.png"></a> <a href="funmoney.html"><img
-                    src="fun.png"></a> <a href="dice2.html"><img src="5.png"></a></div>
+        <div class='navi-block'><a href="list3.html"><img src="list.png"></a> <a href="rps.html"><img height='32px'
+                    src="scissors.png"></a> <a href="funmoney.html"><img src="fun.png"></a> <a href="dice2.html"><img
+                    src="5.png"></a></div>
         <div class='budget-add' style="flex: auto;"><img src="plus.png" onclick="clickAdd()"></div>
         <div class="input-balance-bar" id='inputTransactionBlock' style="display: none;">
             <input id='inputTransactionPrice' type="text" placeholder="amount" size="7">
