--- a/info.html
+++ b/info.html
@@ -79,7 +79,7 @@ a:active {
   <table width="832" height="376" border="0" cellpadding="5" cellspacing="4">
     <tbody>
       <tr>
-        <td width="326" rowspan="27"><p>Education:</p>
+        <td width="326" rowspan="29"><p>Education:</p>
           <p>2012 MFA University of Pennsylvania<br />
             <br />
             2009 BA Georgia Southern University       
@@ -90,15 +90,17 @@ a:active {
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td>PRHBTN  2021<br />
-Loudoun House, Lexington, KY <br />
-Reception: Oct 15, 6-10 pm<br />
-Oct 15 - Nov 12, 2021</td>
+        <td>11th Annual National Juried Exhibition<br />
+          Charles W. and Norma C. Carroll Gallery<br />
+          Marshall University<br />
+        January 18 - February 11, 2022</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td>Team Kentucky<br />
-Kentucky State Capitol 700 Capitol Avenue Frankfort, July 1 - Dec. 31, 2021</td>
+        <td><p>Valdosta National 2022<br />
+          Dedo Maranville Fine Arts Gallery<br />
+        January 21 - February 7, 2022</p>
+        <p>&nbsp;</p></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
@@ -107,6 +109,16 @@ Select Shows and Awards:</td>
       </tr>
       <tr>
         <td>2021</td>
+        <td>Team Kentucky<br />
+Kentucky State Capitol 700 Capitol Avenue Frankfort</td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td>PRHBTN  2021<br />
+Loudoun House, Lexington, KY</td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
         <td> The Object Seen<br />
 Art Center of the Bluegrass, Danville, KY</td>
       </tr>
