--- a/info.html
+++ b/info.html
@@ -79,7 +79,7 @@ a:active {
   <table width="832" height="376" border="0" cellpadding="5" cellspacing="4">
     <tbody>
       <tr>
-        <td width="326" rowspan="29"><p>Education:</p>
+        <td width="326" rowspan="31"><p>Education:</p>
           <p>2012 MFA University of Pennsylvania<br />
             <br />
             2009 BA Georgia Southern University       
@@ -90,22 +90,29 @@ a:active {
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td>11th Annual National Juried Exhibition<br />
-          Charles W. and Norma C. Carroll Gallery<br />
-          Marshall University<br />
-        January 18 - February 11, 2022</td>
+        <td>Jun 24 - Aug 13 (solo show, details to come)</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td><p>Valdosta National 2022<br />
-          Dedo Maranville Fine Arts Gallery<br />
-        January 21 - February 7, 2022</p>
-        <p>&nbsp;</p></td>
+        <td><p>&nbsp;</p></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
         <td></br>
 Select Shows and Awards:</td>
+      </tr>
+      <tr>
+        <td>2022</td>
+        <td>11th Annual National Juried Exhibition<br />
+          Charles W. and Norma C. Carroll Gallery<br />
+Marshall University, Huntington, WV</td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td><p>Valdosta National 2022<br />
+        Dedo Maranville Fine Arts Gallery,<br />
+        Valdosta State University, Valdosta, GA
+        </p></td>
       </tr>
       <tr>
         <td>2021</td>
