--- a/info.html
+++ b/info.html
@@ -90,11 +90,11 @@ a:active {
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td>Jun 24 - Aug 13 (solo show, details to come)</td>
+        <td>Jun 24 - Aug 12 (solo show, Loudoun House, details to come)</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td><p>&nbsp;</p></td>
+        <td>&nbsp;</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
