--- a/info.html
+++ b/info.html
@@ -89,8 +89,11 @@ a:active {
         </td>
       </tr>
       <tr>
-        <td>&nbsp;</td>
-        <td>Jun 24 - Aug 12 (solo show, Loudoun House, details to come)</td>
+        <td>2022</td>
+        <td><p>Carried by Wind, solo exhibition<br />
+        Jun 24 - Aug 12<br />
+        Ludoun House, Lexington KY<br />
+        reception 6/24, 5 - 9 pm</p></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
