--- a/info.html
+++ b/info.html
@@ -79,33 +79,22 @@ a:active {
   <table width="832" height="376" border="0" cellpadding="5" cellspacing="4">
     <tbody>
       <tr>
-        <td width="326" rowspan="31"><p>Education:</p>
+        <td width="326" rowspan="29"><p>Education:</p>
           <p>2012 MFA University of Pennsylvania<br />
             <br />
             2009 BA Georgia Southern University       
         </p>          <p>&nbsp;</p></td>
         <td>&nbsp;</td>
-        <td height="23">Upcoming &amp; Current Shows:
-        </td>
-      </tr>
-      <tr>
-        <td>2022</td>
-        <td><p>Carried by Wind, solo exhibition<br />
-        Jun 24 - Aug 12<br />
-        Ludoun House, Lexington KY<br />
-        reception 6/24, 5 - 9 pm</p></td>
-      </tr>
-      <tr>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td>&nbsp;</td>
-        <td></br>
+        <td height="23"></br>
 Select Shows and Awards:</td>
       </tr>
       <tr>
         <td>2022</td>
+        <td><p>Carried by Wind, solo exhibition<br />
+        Ludoun House, Lexington KY</p></td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
         <td>11th Annual National Juried Exhibition<br />
           Charles W. and Norma C. Carroll Gallery<br />
 Marshall University, Huntington, WV</td>
