--- a/list/funmoney.html
+++ b/list/funmoney.html
@@ -158,9 +158,9 @@
 
     <div class="grid-container">
         <div class="page-title">Fun Money</div>
-        <div class="navi-button"><a href="rps.html"><img height='32px' src="scissors.png"></a> <a href="list3.html"><img
-                    src="list.png"></a> <a href="budget.html"><img src="budget.png"></a> <a href="dice2.html"><img
-                    src="5.png"></a></div>
+        <div class="navi-button"><a href="christmas.html"><img height='32px' src="christmas.png"></a> <a
+                href="list3.html"><img src="list.png"></a> <a href="budget.html"><img src="budget.png"></a> <a
+                href="dice2.html"><img src="5.png"></a></div>
         <div class="mTitle" id='mTitle'>mikey</div>
         <div class="yTitle" id='yTitle'>yoko</div>
         <div class="leftSpan" id='mikeyBalance'>-_-</div>
