--- a/info.html
+++ b/info.html
@@ -79,11 +79,38 @@ a:active {
   <table width="832" height="376" border="0" cellpadding="5" cellspacing="4">
     <tbody>
       <tr>
-        <td width="326" rowspan="29"><p>Education:</p>
+        <td width="326" rowspan="34"><p>Education:</p>
           <p>2012 MFA University of Pennsylvania<br />
             <br />
             2009 BA Georgia Southern University       
         </p>          <p>&nbsp;</p></td>
+          <td>&nbsp;</td>
+          <td height="23">Current &amp; Upcoming Exhibitions</td>
+      </tr>
+      <tr>
+        <td>Oct 7 -<br />
+          Nov 5</td>
+          <td height="23">PRHBTN 2022<br />
+Loudoun House, Lexington, KY</td>
+      </tr>
+      <tr>
+        <td>Nov 18 -<br />
+          Jan 6</td>
+        <td height="23">Lexington Art League Members Show<br />
+Loudoun House, Lexington, KY</td>
+      </tr>
+      <tr>
+        <td>Dec-Jan</td>
+        <td height="23">Small Matters<br />
+        437Co Art Gallery, <br />
+        Colorado Mesa Univesrsity, 
+        Grand Junction, CO</td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+      </tr>
+      <tr>
         <td>&nbsp;</td>
         <td height="23"></br>
 Select Shows and Awards:</td>
